# toasted

./: .gitignore  LICENSE  README.md  pyproject.toml
.spyproject/config/: workspace.ini
src/toasted/: toasted.py
src/tosted.egg-info/: PKG-INFO  SOURCES.txt
